--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.0",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
