--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dame-electro",
-  "homepage": "https://nicolasquirogadev.github.io/dame-electro",
+  "homepage": "https://dameelectricidad.com.ar/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
