--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dame-electro",
-  "homepage": "https://nicolasquirogadev.github.io/dame-electro",
+  "homepage": "https://nicolasquirogadev.github.io/dame-electro/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,7 +9,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",
+    "predeploy": "npm run build && cp public/_redirects dist/",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
