--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build && cp public/_redirects dist/",
+    "predeploy": "npm run build && copy public\\_redirects dist\\",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
